<resources>
    <string name="app_name">Swoosh-App</string>
    <string name="get_started">Get Started</string>
    <string name="sec_text">ON GOING ALL OUT</string>
    <string name="first_text">GO ALL IN</string>
    <string name="find_a_team_in_your_city_dominate_the_league">Find a team in your city dominate the league</string>
    <string name="next">Next</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
</resources>
